# bmad

./: .flake8  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_config.py  test_imports.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
configs/: base_config.yaml  logging_config.yaml  model_config.yaml
configs/history/: config_2025-11-23T14-15-47.499986.json  history.json
configs/model_configs/: diffusion_pinn.yaml  pinn_default.yaml
docs/: architecture.md  bmm-brainstorming-session-2025-11-22.md  bmm-research-technical-2025-11-22.md  bmm-workflow-status.yaml  config-management-usage.md  epics.md  implementation-readiness-report-2025-11-22.md  logging-monitoring-usage.md  product-brief-2025-11-22.md  test-design-system.md  troubleshooting-import-errors.md
docs/sprint-artifacts/: 1-1-project-initialization.context.xml  1-1-project-initialization.md  1-2-configuration-management.context.xml  1-2-configuration-management.md  1-3-logging-monitoring.context.xml  1-3-logging-monitoring.md  2-1-pinn-basic-architecture.context.xml  2-1-pinn-basic-architecture.md  2-2-2d-convection-diffusion.context.xml  2-2-2d-convection-diffusion.md  code-review-1-2-configuration-management-2025-11-22.md  code-review-2-1-pinn-basic-architecture-2025-11-22.md  epic-1-code-review-2025-11-22.md  epic-1-retro-2025-11-22.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md
scripts/: setup_env.bat  setup_env.sh
src/ai_pinn/: __init__.py
src/ai_pinn/config/: __init__.py  history.py  loader.py  validator.py
src/ai_pinn/data/: __init__.py
src/ai_pinn/logging/: __init__.py  logger.py
tests/: __init__.py  test_project_structure.py
tests/integration/: test_diffusion_pinn_integration.py
tests/test_config/: __init__.py  test_history.py  test_loader.py  test_validator.py
tests/test_logging/: __init__.py  test_logger.py
tests/test_monitoring/: __init__.py  test_performance_monitor.py  test_tensorboard_logger.py
(+15 files in other folders)
